--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,11 @@
 {
   "music_volume": 1.5,
-  "effects_volume": 1.5
+  "effects_volume": 1.5,
+
+  "button_up": 119,
+  "button_down": 115,
+  "button_left": 97,
+  "button_right": 100,
+  "button_function_1": 113,
+  "button_function_2": 101
 }
