--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
-    "music_volume": 0.5298611111111108,
-    "effects_volume": 0.44305555555555515,
+    "music_volume": 5.495138888888889,
+    "effects_volume": 3.3944444444444444,
+    "danger_blinking": true,
     "button_up": 119,
     "button_down": 115,
     "button_left": 97,
