zmena jazyka funkcni

--- a/settings.json
+++ b/settings.json
@@ -7,5 +7,6 @@
     "button_left": 97,
     "button_right": 100,
     "button_function_1": 113,
-    "button_function_2": 101
+    "button_function_2": 101,
+    "language": "spanish"
 }
