--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "music_volume": 0.7518055555555556,
-    "effects_volume": 0.4427777777777777,
+    "effects_volume": 0.2795833333333333,
     "danger_blinking": true,
     "button_up": 119,
     "button_down": 115,
@@ -8,5 +8,5 @@
     "button_right": 100,
     "button_function_1": 113,
     "button_function_2": 101,
-    "language": "spanish"
+    "language": "english"
 }
