--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "music_volume": 0.7518055555555556,
     "effects_volume": 0.2795833333333333,
-    "danger_blinking": true,
+    "danger_blinking": false,
     "button_up": 119,
     "button_down": 115,
     "button_left": 97,
