--- a/settings.json
+++ b/settings.json
@@ -9,5 +9,5 @@
     "button_right": 100,
     "button_function_1": 113,
     "button_function_2": 101,
-    "language": "french"
+    "language": "cat"
 }
